# redis-sample-app

./: README.md  pyproject.toml  render.yaml
app/: app.py
app/static/css/: styles.css
app/static/js/: scripts.js
app/templates/: index.html
client/: client.py
