[tool.poetry]
name = "redis-sample-app"
version = "0.1.0"
description = ""
authors = ["iamdpastore <domenico.pastore93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
redis = "^5.0.7"
geopy = "^2.4.1"
folium = "^0.17.0"
requests = "^2.32.3"
opencage = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
